--- a/assets/growbiz/css/main.css
+++ b/assets/growbiz/css/main.css
@@ -203,7 +203,7 @@ ul {
 }
 
 li {
-  list-style: none;
+  /* list-style: none; */
 }
 
 p {
@@ -7023,7 +7023,7 @@ select {
 
 .blog-single {
   background: #ffffff;
-  padding: 20px 20px;
+  padding: 20px 44px;
   box-shadow: 0 10px 20px rgba(16, 0, 71, 0.1);
 }
 .blog-single:hover .blog-img img {
